Changed ide to be editor

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <section class="landing-section section-use-case" id="use-case">
             <div class="section-content tutorial-content">
                 <h2 class="tutorial-title">AI-Ready Data</h2>
-                <p class="tutorial-subtitle">Open your extracted folder in an AI-integrated IDE of your choice</p>
+                <p class="tutorial-subtitle">Open your extracted folder in an AI-integrated editor of your choice</p>
                 
                 <div class="ide-grid">
                     <a href="https://cursor.com/?from=home" class="ide-card" target="_blank">
