iOS formatting changes and footer change

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         </div>
                         <div class="download-info">
                             <h3 class="download-platform">macOS</h3>
-                            <p class="download-description">Download for Mac (.app via DMG)</p>
+                            <p class="download-description">Intel & Apple Silicon</p>
                         </div>
                         <svg class="download-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="download-info">
                             <h3 class="download-platform">Windows</h3>
-                            <p class="download-description">Download for Windows (.exe)</p>
+                            <p class="download-description">Windows 10 or later</p>
                         </div>
                         <svg class="download-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
