Changed browser tab title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocPrep - Make your documents AI-ready</title>
+    <title>docprep - Make your documents AI-ready</title>
     
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
